# AutoClick-n8n

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: import-job-html.py  install-systemd-service.sh  run-service.sh  shutdown.sh  startup.sh  uninstall-systemd-service.sh
src/autoclick_n8n_classifier/: __init__.py  service.py
tests/: test_service.py
workflows/: classifier-training.blueprint.md  classify-job.blueprint.md  rating-webhook.blueprint.md  store-captured-job.blueprint.md
